# engine

./: .gitignore  .gitmodules  CMakeLists.txt  buildwindows.sh
assets/meshes/: test_vk_mesh.json  test_vk_mesh_instance.json
assets/shaders/: test_vk_resource.json  test_vk_resource2.json
assets/shaders/vertex/: shader.vert
include/Engine/Renderer/: RenderContext.h  RenderFrame.h  RenderManager.h  Renderer.h  RendererParams.h
include/Engine/Renderer/Vulkan/: VulkanBuffer.h  VulkanDevice.h  VulkanDynamicBuffer.h  VulkanFramebuffer.h  VulkanImage.h  VulkanMeshRenderManager.h  VulkanRenderFrame.h  VulkanRenderer.h  VulkanSwapchain.h  VulkanUtils.h  VulkanVertex.h
include/Engine/Renderer/Vulkan/Resources/: VulkanMeshInstanceResource.h  VulkanMeshInstanceResourceFactory.h  VulkanMeshResource.h  VulkanMeshResourceFactory.h  VulkanPipelineResource.h  VulkanPipelineResourceFactory.h  VulkanShaderResource.h  VulkanShaderResourceFactory.h
include/Engine/Resources/: MockResource.h  MockResourceFactory.h  Resource.h  ResourceFactory.h  ResourceManager.h
include/Engine/Resources/Utils/: Resource_Types.h
include/Engine/Scene/: Actor.h  Node.h  Scene.h
include/Engine/common/: VulkanCommon.h
src/: main.cpp
src/Engine/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanCommon.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanMeshRenderManager.cpp  VulkanRenderer.cpp  VulkanUtils.cpp
src/Engine/Renderer/Vulkan/Resources/: VulkanMeshInstanceResource.cpp  VulkanMeshResource.cpp  VulkanPipelineResource.cpp  VulkanShaderResource.cpp
src/Engine/Resources/: ResourceManager.cpp
src/Engine/Scene/: Actor.cpp  Node.cpp  Scene.cpp
